@@ -6,7 +6,7 @@
 //
 CUTS_INLINE
 CUTS_TCPIP_CCM_Servant::CUTS_TCPIP_CCM_Servant (const char * name)
-: name_ (name)
+: CUTS_CCM_Servant (name)
 {
 
 }
@@ -16,42 +16,6 @@ CUTS_TCPIP_CCM_Servant::CUTS_TCPIP_CCM_Servant (const char * name)
 //
 CUTS_INLINE
 CUTS_TCPIP_CCM_Servant::~CUTS_TCPIP_CCM_Servant (void)
-{
-
-}
-
-//
-// ~CUTS_TCPIP_CCM_Servant
-//
-CUTS_INLINE
-const ACE_CString & CUTS_TCPIP_CCM_Servant::name (void) const
-{
-  return this->name_;
-}
-
-//
-// activate_component
-//
-CUTS_INLINE
-void CUTS_TCPIP_CCM_Servant::activate_component (void)
-{
-
-}
-
-//
-// passivate_component
-//
-CUTS_INLINE
-void CUTS_TCPIP_CCM_Servant::passivate_component (void)
-{
-
-}
-
-//
-// remove
-//
-CUTS_INLINE
-void CUTS_TCPIP_CCM_Servant::remove (void)
 {
 
 }
