@@ -1,3 +1,14 @@
+Fri Jun  5 14:48:06 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
+
+        * cuts/arch/ccm/CCM_Servant_T.h:
+        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant.h:
+        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant.inl:
+
+          . Derived the CUTS_TCPIP_CCM_Servant class from the
+            CUTS_CCM_Servant class since it contains the required
+            methods/properties for all CCM servants that integrate
+            with the container.
+
 Fri Jun  5 13:56:31 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Servant_Header_Generator.cpp:
